--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
   <script src="imports/jquery.js" type="text/javascript" charset="utf-8"></script>
   <script src="imports/p5.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="src/chesshelper.js" type="text/javascript" charset="utf-8"></script>
+  <script src="src/board.js" type="text/javascript" charset="utf-8"></script>
   <script src="src/sketch.js" type="text/javascript" charset="utf-8"></script>
 </body>
 
